Add basic option for a nominated user to receive emails/be responsible for log entries, and log as/send emails to that user.

--- a/adm/style/akismet_body.html
+++ b/adm/style/akismet_body.html
@@ -9,6 +9,8 @@
 			<dd><input type="text" name="gothick_akismet_api_key" id="gothick_akismet_api_key" value="{GOTHICK_AKISMET_API_KEY}" /></dd>
 			<dt><label for="gothick_akismet_url">{L_ACP_AKISMET_URL}</label></dt>
 			<dd><input type="text" name="gothick_akismet_url" id="gothick_akismet_url" value="{GOTHICK_AKISMET_URL}" /></dd>
+			<dt><label for="gothick_akismet_username">{L_ACP_AKISMET_ENTER_USERNAME}{L_COLON}</label></dt>
+			<dd><input class="text medium" type="text" id="gothick_akismet_username" name="gothick_akismet_username" value="{GOTHICK_AKISMET_USERNAME}"/></dd>
 		</dl>
 
 		<p class="submit-buttons">
