Improvements and help messages for the settings page.

--- a/adm/style/akismet_body.html
+++ b/adm/style/akismet_body.html
@@ -2,6 +2,12 @@
 
 <h1>{L_SETTINGS}</h1>
 
+<h2>{L_ACP_AKISMET_WELCOME}</h2>
+<p>{L_ACP_AKISMET_INTRO}</p>
+<p>{L_ACP_AKISMET_SIGN_UP}</p>
+<p>{L_ACP_AKISMET_ADMINS_AND_MODS_OKAY}</p>
+<p>{L_ACP_AKISMET_UNENCRYPTED_WARNING}</p>
+
 <form id="acp_board" method="post" action="{U_ACTION}">
 	<fieldset>
 		<dl>
